Fix for post link color not being visible on light theme.

--- a/resources/scss/index.scss
+++ b/resources/scss/index.scss
@@ -186,10 +186,6 @@ $secondary-color: #0b5ed8;
     border-radius: .25rem;
   }
 
-  a {
-    color: #f8f9fa;
-  }
-
   pre {
     padding: 7px 24px;
     margin-top: 2rem;
